# ci-cd-freestyle

./: CMakeLists.txt  main.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  test_utils.cpp
